# emsn2

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODELS_LICENSE  README.md  README_NEW.md  pyproject.toml
config/: __init__.py  dutch_bird_names.json  email.yaml  emsn-logs.logrotate  emsn_secrets.py  go2rtc.yaml.example  grafana-species-overview-dashboard.json  mosquitto-bridge-berging.conf  mosquitto-bridge-zolder.conf  mosquitto-listener-berging.conf  report_styles.yaml  station_config.py  ulanzi_config.py
database/: 04_anomaly_tables.sql  APPLY_MIGRATION_014.sh
docs/: .inventory_state.json  ANOMALY_DETECTION.md  CLEANUP_GUIDE.md  EMSN-Handboek-v1.0.md  EMSN_Workflow.md  HANDLEIDING-SD-KAART-RECOVERY.md  README.md  RELEASE_NOTES_v2.1.0.md  SERVICES_OVERVIEW.md  claude-notes.md  fase-10-flysafe-radar.md  grafana-dashboards.md  home_assistant_cooldown_config.yaml  homer-dashboard.md  infrastructuur.md  nestkast-cameras-setup.md  patches.md  phase13_implementation.md  systeem-inventarisatie-2025-12-16.md  systeem-inventarisatie-2025-12-21.md  systeem-inventarisatie-2025-12-28.md  systeem-inventarisatie-2026-01-04.md
grafana/: IMPORT_FLYSAFE_DASHBOARD.md  anomaly-dashboard.json  atmosbird-dashboard-final.json  atmosbird-dashboard-v2.json  atmosbird-dashboard.json  emsn-alerts-events.json  emsn-anomaly-detection.json  emsn-atmosbird-climate.json  emsn-bat-monitoring.json  emsn-biodiversity.json  emsn-database-monitoring.json  emsn-milestones.json  emsn-mqtt-alerts.json  emsn-mqtt-monitoring.json  emsn-nestbox-monitoring.json  emsn-network-monitoring.json  emsn-system-overview.json  emsn-timer-timeline.json  (+3 more)
(+369 files in other folders)
